name:                ChanDownloader
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Jhana1/ChanDownloader#readme
license:             BSD3
license-file:        LICENSE
author:              James Anastasiou
maintainer:          james.anastasiou@gmail.com
copyright:           2016 James Anastasiou
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , mtl
                     , transformers
                     , lens
  default-language:    Haskell2010

executable ChanDownloader-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ChanDownloader
  default-language:    Haskell2010

test-suite ChanDownloader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ChanDownloader
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Jhana1/ChanDownloader
